Broadway CHAIN - SANDBOX/src/objects/Single_Service_Offer__c.object
<CustomObject>
    <description>Used to create Single Service Offers (SSOs)</description>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Single Service Offers</relationshipLabel>
        <relationshipName>Single_Service_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_offer_made__c</fullName>
        <label>Date offer made</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSNO_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NSNO Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Client__c</field>
                <operation>equals</operation>
                <valueField>NSNO_Event__c.Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NSNO_Event__c</referenceTo>
        <relationshipLabel>Single Service Offers</relationshipLabel>
        <relationshipName>Single_Service_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Outcome__c</fullName>
        <label>Offer Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Single_Service_Offer__c</fullName>
        <label>Single Service Offer</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_making_SSO__c</fullName>
        <label>Team making SSO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Relate this SSO to an NSNO or NLOS referral</inlineHelpText>
        <label>NSNO/NLOS Stay Event</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
            <filterItems>
                <field>Timeline_Event__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>NSNO Referrals, NLOS Referrals</value>
            </filterItems>
            <filterItems>
                <field>$Source.Client__c</field>
                <operation>equals</operation>
                <valueField>Timeline_Event__c.Client__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Default_Project_Name__c</field>
                <operation>equals</operation>
                <valueField>Timeline_Event__c.Accommodation2__c</valueField>
            </filterItems>
            <filterItems>
                <field>Timeline_Event__c.Arrival_Date__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Timeline_Event__c.Reason_offer_not_made__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Timeline_Event__c</referenceTo>
        <relationshipLabel>Single Service Offers</relationshipLabel>
        <relationshipName>Single_Service_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Single Service Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Client__c</columns>
        <columns>Single_Service_Offer__c</columns>
        <columns>Team_making_SSO__c</columns>
        <columns>Date_offer_made__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSO-{00000}</displayFormat>
        <label>Single Service Offer ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Single Service Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_edit_other_teams_SSO</fullName>
        <active>true</active>
        <description>Prevent users editing SSOs recorded by other services</description>
        <errorConditionFormula>$Setup.Global_Object_Validation__c.Timeline_Event_Active__c &amp;&amp; AND(NOT(ISNEW()), Team_making_SSO__c &lt;&gt; $User.Default_Project_Name__c )</errorConditionFormula>
        <errorMessage>You can only amend an existing SSO if you have your Default Project set to the team that originally recorded it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_cannot_be_in_future</fullName>
        <active>true</active>
        <description>Prevent users from creating SSO with Offer Date in the future</description>
        <errorConditionFormula>AND(  OR(ISNEW(), ISCHANGED( Date_offer_made__c ) )  , Date_offer_made__c &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>Date_offer_made__c</errorDisplayField>
        <errorMessage>Date Offer Made cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NSNO_Event_Required</fullName>
        <active>true</active>
        <description>Ensure System Admin users enter an NSNO Event when editing/creating SSOs on behalf of NSNO, as the field is not required on Admin page layout</description>
        <errorConditionFormula>AND( $User.ProfileId =&quot;00e800000014UPq&quot;, OR( CONTAINS(  Team_making_SSO__c  , &quot;NSNO Assessment&quot;) ,CONTAINS(  Team_making_SSO__c  , &quot;NSNO Staging Post&quot;)) ,  ISBLANK( NSNO_Event__c ))</errorConditionFormula>
        <errorDisplayField>NSNO_Event__c</errorDisplayField>
        <errorMessage>Please enter NSNO Event for SSOs created/edited on behalf of NSNO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_1_day_to_amend</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( FLOOR( TODAY() -  DATEVALUE(CreatedDate)) &gt; 1,   AND($User.ProfileId &lt;&gt;&quot;00e800000014UPq&quot;,$User.ProfileId &lt;&gt;&quot;00eC0000001SrXV&quot;,$User.ProfileId &lt;&gt;&quot;00eC0000001Sswd&quot;))</errorConditionFormula>
        <errorMessage>You only have 1 day to amend the SSO. Please contact the CHAIN team to amend (020 7710 0562 or chain@mungosbroadway.org.uk).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSO_already_exists</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
Client__r.Count_of_SSOs__c &gt; 0,
ISNEW(), 
NOT(CONTAINS ( $User.Default_Project_Name__c , &quot;NLOS&quot;)),
$User.ProfileId &lt;&gt; &quot;00e800000014UPq&quot;,
Date_offer_made__c -  Client__r.Date_NSNO_offer_made__c &lt;365,
NOT( AND(OR( CONTAINS( $User.Default_Project_Name__c , &quot;NSNO Assessment&quot;) ,CONTAINS( $User.Default_Project_Name__c , &quot;NSNO Staging&quot;)),OR( CONTAINS(  Client__r.Team_making_single_service_offer__c  , &quot;NSNO Assessment&quot;) ,CONTAINS( Client__r.Team_making_single_service_offer__c , &quot;NSNO Staging&quot;)))) 
)</errorConditionFormula>
        <errorMessage>A Single Service Offer already exists for this client. If you would like to replace the existing offer please contact the service that made it to obtain their agreement, and then forward detail to CHAIN team (020 7710 0562 or chain@mungosbroadway.org.uk).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_must_be_entered_by_admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND ($User.ProfileId  =&quot;00e800000014UPq&quot;, ISNEW(), ISBLANK ( Team_making_SSO__c ))</errorConditionFormula>
        <errorDisplayField>Team_making_SSO__c</errorDisplayField>
        <errorMessage>CHAIN Admin must enter the team making the SSO manually</errorMessage>
    </validationRules>
</CustomObject>